upstreamMetadata/force-app/main/default/objects/Account/fields/Average_Stars__c.field-meta.xml
<CustomField>
    <fullName>Average_Stars__c</fullName>
    <description>Average stars given by customers</description>
    <formula>Stars_Count__c /  Ratings_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Stars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>