upstreamMetadata/force-app/main/default/objects/Account/fields/Ratings_Count__c.field-meta.xml
<CustomField>
    <fullName>Ratings_Count__c</fullName>
    <description>The number of ratings given to this restaurant</description>
    <label>Ratings Count</label>
    <summaryForeignKey>Rating__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>