upstreamMetadata/force-app/main/default/objects/Account/fields/Stars_Count__c.field-meta.xml
<CustomField>
    <fullName>Stars_Count__c</fullName>
    <description>Counting all stars given by all customers</description>
    <label>Stars Count</label>
    <summarizedField>Rating__c.Stars__c</summarizedField>
    <summaryForeignKey>Rating__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>